# ClinicErp

./: README.md  pyproject.toml  requirements.txt  setup.py
clinic_management/: hooks.py
clinic_management/clinic_management/doctype/appointment_installment/: appointment_installment.json
clinic_management/clinic_management/doctype/clinic_appointment/: clinic_appointment.json  clinic_appointment.py
clinic_management/clinic_management/doctype/clinic_patient/: clinic_patient.json  clinic_patient.py
clinic_management/clinic_management/doctype/doctor_schedule/: doctor_schedule.json
clinic_management/clinic_management/doctype/tooth_treatment_detail/: tooth_treatment_detail.json  tooth_treatment_detail.py
clinic_management/clinic_management/doctype/treatment_service/: treatment_service.json
clinic_management/clinic_management/page/: clinic_dashboard.py
clinic_management/setup/: install.py
